test/cases/compile_errors/bad_member_access_on_tuple.zig
comptime {
    _ = @TypeOf(.{}).is_optional;
}

// error
// backend=stage2
// target=native
//
// :2:21: error: struct '@TypeOf(.{})' has no member named 'is_optional'
